--- a/_posts/2013-09-25-bicycle.md
+++ b/_posts/2013-09-25-bicycle.md
@@ -1,15 +1,16 @@
 ---
 layout: post
-title: "Stratification (Haiku #2)"
+title: "Baiku (Bicycle Haiku)"
 category: poetry
 tags: [haiku]
 ---
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-Stratification  
-Mother, daughter, father, son  
-Mounds of laundry grow  
+Our love for machines  
+And our better nature, now  
+Perfectly combined.  
+
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
