--- a/_posts/2013-09-25-bicycle.md
+++ b/_posts/2013-09-25-bicycle.md
@@ -8,8 +8,8 @@ tags: [haiku]
 <p>&nbsp;</p>
 
 Our love for machines  
-And our better nature, now  
-Perfectly combined.  
+and our better nature, now  
+perfectly combined.  
 
 
 <p>&nbsp;</p>
