--- a/_posts/2008-01-01-the-thing.md
+++ b/_posts/2008-01-01-the-thing.md
@@ -1,5 +1,11 @@
+---
+layout: post
+title: "The Thing, Golem, and What's at The Heart of The Stone"
+category: essay
+tags: [collage, images]
+---
+
 ![The Thing](/assets/thing.jpg)
-The Thing, the Golem, and what's at the heart of the stone
 
 If you go to [adherents.com](http://adherents.com/) you can learn many interesting things related to religious practice in the world, including the religious affiliation of any famous person. One of my favorite pages on this site is the list of super heroes and comic book characters. Yes, this is the place to learn that Marvel's Elektra is Greek Orthodox, Superman is Methodist/Kryptonian, X-Man Sabretooth was an atheist who saw the light ...
 
