--- a/_posts/2008-01-01-the-thing.md
+++ b/_posts/2008-01-01-the-thing.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "The Thing, Golem, and What's at The Heart of The Stone"
+title: "What's at The Heart of the Stone"
 category: essay
 tags: [collage, images, heroes]
 ---
