--- a/_posts/2014-02-22-Collages-2013.md
+++ b/_posts/2014-02-22-Collages-2013.md
@@ -4,7 +4,7 @@ title: "Collages 2013"
 category: art
 tags: [collage, images]
 ---
-[![2013 Collages](/assets/athand.jpg)](http://sevendown.org/collage/13/)
+[![Collages, 2013](/assets/athand.jpg)](http://sevendown.org/collage/13/) 
 
 A series of Collages from 2013
 
