--- a/_posts/2013-12-12-heroes.md
+++ b/_posts/2013-12-12-heroes.md
@@ -6,7 +6,7 @@ tags: [collage, images, heroes]
 ---
 [![Heroes](/assets/thing-icon.jpg)](http://sevendown.org/collage/heroes/)
 
-A series of Collages, some from early on, that use images of comic book heroes, one in particular. Ben Grimm, AKA, *The Thing* is my favorite of the comic book heroes. You can read more about my thing for The Thing [here](http://dpmaddalena.github.io/20051018/thing-theology/) and [here](http://dpmaddalena.github.io/20080101/the-thing/)
+A series of Collages, some from early on, that use images of comic book heroes One in particular, Ben Grimm, AKA, *The Thing*, is my favorite of all. You can read more about my thing for The Thing [here](http://dpmaddalena.github.io/20051018/thing-theology/) and [here](http://dpmaddalena.github.io/20080101/the-thing/)
 
 <a href="http://sevendown.org/collage/heroes/" target="_blank">Heroes in Collage</a>
 
