--- a/_posts/2008-01-01-the-thing.md
+++ b/_posts/2008-01-01-the-thing.md
@@ -7,7 +7,7 @@ tags: [collage, images, heroes]
 
 ![The Thing](/assets/thing.jpg)
 
-If you go to [adherents.com](http://adherents.com/) you can learn many interesting things related to religious practice in the world, including the religious affiliation of any famous person. One of my favorite pages on this site is the list of super heroes and comic book characters. Yes, this is the place to learn that Marvel's Elektra is Greek Orthodox, Superman is Methodist/Kryptonian, X-Man Sabretooth was an atheist who saw the light ...
+If you go to [adherents.com](http://adherents.com/) you can learn many interesting things related to religious practice in the world, including the religious affiliation of any famous person. One of my favorite pages on this site is the list of super heroes and comic book characters. Yes, this is the place to learn that Marvel's Elektra is Greek Orthodox, Superman is Methodist/Kryptonian, X-Man Sabretooth was an atheist who saw the light.
 
 >"... Wolverine attends the funeral of [his arch-rival] Sabretooth, and learns that Sabretooth became a devout "born-again" Christian. Sabretooth's funeral was attended by scores of people who testified about how Sabretooth had touched their lives and had been an inspiration to them."
 
