post img link to ltw

--- a/_drafts/2009-01-01-ltwpost.md
+++ b/_drafts/2009-01-01-ltwpost.md
@@ -7,5 +7,5 @@ tags : [(low) tech writer]
 ---
 
 
-![low tech writer](/assets/ltw/header14.jpg)
+[![low tech writer](/assets/ltw/header14.jpg)](http://lowtechwriter.com)
 
