--- a/_posts/2014-02-22-Collages-2013.md
+++ b/_posts/2014-02-22-Collages-2013.md
@@ -6,7 +6,7 @@ tags: [collage, images]
 ---
 [![Collages, 2013](/assets/athand.jpg)](http://sevendown.org/collage/13/) 
 
-A series of Collages from 2013
+A galery of mostly recent collages, with a few oldies on display for the first time. 
 
 <a href="http://sevendown.org/collage/13/" target="_blank">Collages, 2013</a>
 
