--- a/_posts/2009-02-23-a-lost-art.md
+++ b/_posts/2009-02-23-a-lost-art.md
@@ -10,7 +10,7 @@ In addition to the mighty Oxford English [Dictionary](http://www.imby.net/200902
 
 ### Time
 
-Noun. The successive states of the universe regarded as a whole whose every part or moment is before or after every other & position in which is defined in answer to the question, 'when?' ....
+> Noun. The successive states of the universe regarded as a whole whose every part or moment is before or after every other & position in which is defined in answer to the question, 'when?' ....
 
 *That*, apart from being very slightly convoluted while at the same time slightly compressed to fit in such a short dictionary, is *delightful*. (And, you might benefit, as I did, by mentally adding the word "whose" before the word "position".)
 
