--- a/_posts/2009-01-15-cast-iron.md
+++ b/_posts/2009-01-15-cast-iron.md
@@ -10,7 +10,7 @@ A number of years ago, we decided to buy a *nice* frying pan for our kitchen. We
 
 We decided to buy a stainless steel pan, serious and heavy, from some famous company whose name you'd know, but I can't remember. It would be the kind of pan you keep forever, we told ourselves, to make ourselves feel better about the cost. We researched the options and ended up spending close to 150 dollars that Christmas on The Pan. We bought special pads (that wouldn't scratch it ... yes that is a problem with stainless steel: if you scratch it too much the rougher surface is harder to clean) and learned how to clean it with special powdery chemical stuff so that it would be pristine (again, so nothing would stick to it). It had carefully chosen layers of different materials in the thick base to transfer heat evenly. Sadly, Within a few months this impressive base had warped and the pan rocked on the stove-top. Since the handle was a long heavy piece of stainless steel itself, the pan always rocked in the direction of the handle. This made it really hard to cook sauces or fry things, as liquids pooled in the downhill third of the pan. We thought that maybe because it was designed as a "stove top" appliance, that it would be able to withstand stove-top heat. Our mistake. 
 
-![Iron](/assets/ltw/castironsm.jpg)
+![Iron](/assets/ltw/castiron.jpg)
 
 The last two pots I've bought for our kitchen have been made of **cast iron**. The fry pan (above) that replaced the stainless Pan was *20 dollars* at a camping store, and it ... will never warp. It's about 10 years old now, and it will look the same in 40 (I know because I've recently inherited a 60 year old pan that looks even better than mine). How does it cook? So nice. I seasoned it by cooking oil onto the surface with lots of heat, and never looked back. If you could feel the surface of the pan, it feels almost exactly like a non-stick: not really greasy ... dry ... but *slippery*. And it really truly doesn't stick: I can cook eggs on it, no problem.
 
