--- a/_posts/2009-01-15-cast-iron.md
+++ b/_posts/2009-01-15-cast-iron.md
@@ -12,7 +12,7 @@ We decided to buy a stainless steel pan, serious and heavy, from some famous com
 
 ![Iron](/assets/ltw/castiron.jpg)
 
-The last two pots I've bought for our kitchen have been made of **cast iron**. The fry pan (above) that replaced the stainless Pan was *20 dollars* at a camping store, and it ... will never warp. It's about 10 years old now, and it will look the same in 40 (I know because I've recently inherited a 60 year old pan that looks even better than mine). How does it cook? So nice. I seasoned it by cooking oil onto the surface with lots of heat, and never looked back. If you could feel the surface of the pan, it feels almost exactly like a non-stick: not really greasy ... dry ... but *slippery*. And it really truly doesn't stick: I can cook eggs on it, no problem.
+The last two pots I've bought for our kitchen have been made of **cast iron**. The fry pan (above) that replaced the stainless Pan was *20 dollars* at a camping store, and it *will never warp*. It's about 10 years old now, and it will look the same in 40 (I know this because we recently inherited a 60 year old pan that looks even better than this one). How does it cook? So nice. I seasoned it by cooking oil onto the surface with lots of heat, and never looked back. If you could feel the surface of the pan, it feels almost exactly like a non-stick: not really greasy ... dry ... but *slippery*. And it really truly doesn't stick: I can cook eggs on it, no problem.
 
 I don't really need water for cleaning and rarely use soap, although it can handle it. Normally, I put in a couple tablespoons of cheap salt, a dab of cooking oil, and use a paper towel to work it around. The salt acts as a nifty abrasive. Water comes in handy if we've cooked something with sugar in the sauce: it helps get the sticky out. And if something has stuck to it, I just hit it with the metal spatula to scrape it clean. 
 
