kill 'archive', tweak categories

--- a/_posts/2008-01-01-the-thing.md
+++ b/_posts/2008-01-01-the-thing.md
@@ -2,7 +2,7 @@
 layout: post
 title: "What's at The Heart of the Stone"
 category: essay
-tags: [collage, images, heroes]
+tags: [collage, heroes]
 ---
 
 ![The Thing](/assets/thing.jpg)
