--- a/_posts/2012-06-06-collages-2012.md
+++ b/_posts/2012-06-06-collages-2012.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Collages 2012"
-category: art
-tags: [collage, images]
+category: images
+tags: [collage]
 ---
 [![2012 Collages](/assets/praxedis.jpg)](http://sevendown.org/collage/12/)
 
