--- a/_posts/2013-12-12-heroes.md
+++ b/_posts/2013-12-12-heroes.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Heroes in Collage"
-category: art
-tags: [collage, images, heroes]
+category: images
+tags: [collage, heroes]
 ---
 [![Heroes](/assets/thing-icon.jpg)](http://sevendown.org/collage/heroes/)
 
