--- a/_posts/2014-02-22-Collages-2013.md
+++ b/_posts/2014-02-22-Collages-2013.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "Collages 2013"
-category: art
-tags: [collage, images]
+category: images
+tags: [collage]
 ---
 [![Collages, 2013](/assets/athand.jpg)](http://sevendown.org/collage/13/) 
 
