Update and rename some-hope.md to 2016-08-29-some-hope.md

--- a/_drafts/2016-08-29-some-hope.md
+++ b/_drafts/2016-08-29-some-hope.md
@@ -8,7 +8,7 @@ tags : [heroes, homage, children]
 
 This video installation (here in raw video form) was projected on the wall in a hallway in my house during an all-day Easter celebration. It was purposely projected in a cramped space, so that the images would skew along the wall in tortured perspective, intimately close to guests as they walked through the hallway to the back of the house. 
 
-The images are all macro photographs of 8mm film stock from my early childhood, a time of untrammeled innocence. Music from Mind Tree's Element4l soundtrack: Close Your Eyes So You Can See (Pretty Ghost Mix).
+The images are all macro photographs of 8mm film stock from my early childhood, a time of innocence. Music from Mind Tree's Element4l soundtrack: Close Your Eyes So You Can See (Pretty Ghost Mix).
 
 <video controls="controls" width="450" name="First The Words" src="/assets/somehopewb.mp4"></video>
 
