Update and rename 2017-05-25-abrasion-(a-new-novella).md to 2017-05-25-abrasion.md

--- a/_posts/2017-05-25-abrasion.md
+++ b/_posts/2017-05-25-abrasion.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Abrasion"
+title: "Abrasion: a Sci-Fi Novella"
 description: ""
 category: story
 tags: [books, sacrament, heroes, sci-fi]
