increase scope of quote

--- a/_posts/2017-05-25-abrasion.md
+++ b/_posts/2017-05-25-abrasion.md
@@ -10,7 +10,20 @@ tags: [books, sacrament, heroes, sci-fi]
 
 <p>&nbsp;</p>
 
-[...]
+
+The heavy soles of her boots ground the rubble of several thousand years a little finer with every shuffling visit to the ancient square. On this particular Friday, she carried her obligation across the courtyard, mindlessly fulfilling some ancient duty of lapsed relevance. She felt herself come to a stop in the center of the gravel expanse. Around her, along the outer edges of the square, appeared a number of uninspired structures, looking exactly as they had just before the end: 21st century architecture in all its coincidental glory. Each had been perfectly preserved in a kind of solid holographic projection long after the passing of anyone who might have suggested other historical eras more worthy of emulation. A comfort, it had been decided; even though walking over the crumbled remains of the last real buildings – and everything buried below – inspired nothing in her so much as dread. The ghostly spaces around her provided no relief: they were low-rent amusement-park rides, filled with hollow, mechanistic beings (nor could she ever get a look behind the facade, because it always faced in her direction). 
+
+Today, her steps felt heavier under the cruel feeling that she too was being ridiculously propped up, that she too belonged in the ground. She imagined the vast, cold network of tiny interlocking spaces beneath her, extending through the strata of broken stone, like the absence of a nervous system that once animated the intercourse of living things. She briefly surveyed her own being for signs of life.
+
+I should be dead, she thought.
+
+She stood now in the ravenous silence, her very thoughts and feelings threatened by the consuming emptiness around her. And still the old dream returned to her. Sleeping or awake, it was always the same: she was a priestess, a goddess, rising above the horizon, a towering plume of ash, smoke, and fire. Though she generally believed herself to be an inconsequential relic, her dreams were closer to the truth: that among the last shrinking pieces of this ruined world, she was royalty, clothed with the sun.
+	
+It was difficult to take these dreams seriously. Her presence suggested something far more elemental – her erosive boots, grinding like glaciers over the surface of the earth; her thick canvas coveralls and jacket, binding her volcanic interior like the earth’s crust and making her look like she'd been carved out of a tree trunk. The whole of her physical presence suggested an indifferent determinism and lack of free will that was almost empty of thought, almost without prejudice. She could very well be just a force of nature; a mindless wave, rising with the tide to break against the cliffs.
+
+Yet, while she entertained herself with these small fantasies, it was Common Knowledge that inside of her was the growing threat of an authentic, full-scale disaster, if ever she came in contact with anything of real value.
+
+She was, in fact, the planet's last Act of God, waiting to happen.
 
 She pushed open the door to the shimmering image of City Hall, and approached the placid, alert receptionist, her boots now treading more softly, impotently suspended on the mocking, hardwood floor, which squeaked in a comforting way.
 
@@ -18,7 +31,13 @@ She pushed open the door to the shimmering image of City Hall, and approached th
 
 'I'm here to pay my utility bill,' she said, playing her part.
 
-'Certainly.' said the nobody, the everybody-who-ever-worked-a-desk-job in front of her, reaching into a metal lock-box for a bound stack of receipts. Lifting the top pages free, he folded the back cover up and under them, recorded the date on the first page, simultaneously imprinting a copy beneath it. 'Another beautiful day,' he began, as they acted out the ritual, passing facsimiles between them.
+'Certainly.' said the nobody, the everybody-who-ever-worked-a-desk in front of her, reaching into a metal lock-box for a bound stack of receipts. Lifting the top pages free, he folded the back cover up and under them, recorded the date on the first page, simultaneously imprinting a copy beneath it. 'Another beautiful day,' he began, as they acted out the ritual, passing facsimiles between them.
+
+Normally, some minutes of pleasant conversation could go by before she tired of it. She would occasionally let herself speak freely, giving herself to the consolation of human interaction, even if it was only an elaborate recollection.
+
+Today, she was in a mood, and didn't respond. The receptionist was not insensitive.
+
+He softened just a little, leaned backward with a slight tilt of his head, and said with the subtlest expression of concern, 'Anything else I can help you with?'
 
 [...]
 
@@ -28,4 +47,4 @@ She pushed open the door to the shimmering image of City Hall, and approached th
 
 *Anonymous*, 2015, paper sculpture, by Zoe Maddalena
 
-*read the [full chapter](http://pages.imby.net/abrasion) or [email](mailto:dpmaddalena@gmail.com?subject=abrasion) for more.*
+*[email](mailto:dpmaddalena@gmail.com?subject=abrasion) for more information on this project.*
