Update and rename 2022-06-24-arpaxos to 2022-06-24-arpaxos.md

--- a/_drafts/2022-06-24-arpaxos.md
+++ b/_drafts/2022-06-24-arpaxos.md
@@ -12,46 +12,46 @@ My trip to Greece was only ten days, and it was primarily to reconnect to Anghel
 
 I'm here to tell you, Arpaxos _got away from it all_. Anghelika and I attempted to reach his church on the southwestern cape of Mani, but were unsuccessful. Though the churches in Isolation are amalgams of many old Greek churches I have visited over the years, I had never been to the two in the story -- one on the top of the cliffs of Cape Grosso, called Agia Sotira (= 'of the savior'), and one nestled in the cliff below, called Agia Eleousa (= 'of the merciful one'). I picked these churches because they were the most remote in Mani. Here they are on a satellite shot of the peninsula, shown viewed from the West, ancient-map-style. You can see one of Arpaxos' stops at the top-left: Gytheon (a name that combines the words for Earth and God), where Anghelika and I set up our cozy base camp. The two churches are down on the bottom-right, marked in yellow.
 
-<img src='gytheo-tenaron.png' width='450'>
+<img src='/assets/arpa/gytheo-tenaron.png' width='450'>
 
 And, wow, were they remote. We made two attempts to get to the ridge of this cape, shown here from the north-east (from the cliff-bound church of Odigytria), a perspective that suggests we will not be successful ...
 
-<img src='grosso-n.jpg' width='450'>
+<img src='/assets/arpa/grosso-n.jpg' width='450'>
 
 We hoped to use a trail visible on the Greek army topo map, further to the south:
 
-<img src='grosso-topo.jpg' width='450'>
+<img src='/assets/arpa/grosso-topo.jpg' width='450'>
 
 But after trying with all the tools available to us (GPS, old paper maps, and a few decades experience in backcountry travel in the US and Greece), we had to admit defeat. Later, we learned from a local named Stavros that 'that trail has collapsed' (we only saw two locals in hours of driving and scouting this part of Mani); here is a view of where the neglected trail begins, between two old orchard walls ...
 
-<img src='ancient-paths.jpg' width='450'>
+<img src='/assets/arpa//assets/arpa//assets/arpa/ancient-paths.jpg' width='450'>
 
 And, what we soon encountered: low-lying wild bush obscuring the path that should have taken us up this face ...
 
-<img src='grosso-e.jpg' width='450'>
+<img src='/assets/arpa//assets/arpa/grosso-e.jpg' width='450'>
 
 
 I cleared the way as best I could, but we never found a clear path up, only wildlife paths continually trending south to a (currently empty) watering hole. We gave up and left the path to the thorns and 'great yellow spiders'. I can't tell you how many of these webs I walked through. We never got bitten, though Anghelika noticed that after we turned around and she led the way back to our car, that she was walking through webs already under repair. Diligent little creatures.
 
-<img src='great-yellow-spiders.jpg' width='450'>
+<img src='/assets/arpa/great-yellow-spiders.jpg' width='450'>
 
 
 I was disappointed, but Anghelika encouraged me not to give up. We drove around until we met Stavros, the local who confirmed the non-existence of our path. He said, 'there is a way ...', assuring us that he walked up the hill for a view of the sea 'twice a day'. He also said that 'sometimes I take people like you up, and sometimes I go up there to help people get down after dark.' We took note of his directions and thanked him, unsure of whether we'd have time or energy for another attempt. After a drive to a fish taverna 30 minutes up the coast where we refuelled and refilled our bottles, we returned to make an attempt. The path, said Stavros, 'leaves from the top of the cemetery past Lagoudiá, and is very clear, easy to the top; then, it all 'opens up' and anyone with a strong heart and shoes can walk along the ridge', where, he said, 'you will pass several churches'. Here is 'the good path' ...
 
-<img src='the-good-path.jpg' width='450'>
+<img src='/assets/arpa/the-good-path.jpg' width='450'>
 
 
 These bushes are indeed 'the kind that goats don't eat', and were painful to walk through, even for Anghelika, who wore jeans; when we made the ridge, we found the first church, complete with some ancient columns among the wreckage ...
 
-<img src='church.jpg' width='450'>
+<img src='/assets/arpa/church.jpg' width='450'>
 
-<img src='column.jpg' width='450'>
+<img src='/assets/arpa/column.jpg' width='450'>
 
 The presence of the column is not itself a sign of great age, but normal practice for the church-builders of Mani, who were happy to repurpose classical ruins in the making of places of worship. Nevertheless, this church is likely around 700-900 years old. It is NOT a tourist destination, because, in Mani there are hundreds of these ruins, both ancient and medieval, across the peninsula.
 
 Alas, shortly after arriving at this church, the wild rocky way became impassable; it took us 40 minutes to cover the kilometer from cemetery to church and we had 3 to go ... through this ...
 
-<img src='whatgoatsdonteat.jpg' width='450'>
+<img src='/assets/arpa/whatgoatsdonteat.jpg' width='450'>
 
 
 Those rocks are both sharp and unstable, risking turned ankles and shredded shoes, and the bushes may look small and unassuming, but, youch, they bite. I have hiked well over a thousand miles through wilderness, under heavy loads, often without trails, and I was totally beaten by this landscape. I told myself that Arpaxos and his father walked the secret ways (like Stavros?) during childhood visits, and that, when he came to Agia Sotyra in Isolation, he took his time on what he thought would be his final journey.
@@ -60,46 +60,46 @@ Those rocks are both sharp and unstable, risking turned ankles and shredded shoe
 
 I knew that I wouldn't be able to visit the church that Arpaxos falls to halfway through Isolation, because I wasn't willing to slide down the cliff face like he did! The real-world church is accessible from the sea and a rough trail from below, but I didn't have time to hire a boat. Again, the church in Isolation is an amalgam of churches I have visited on the surface and in caves. Here is another visitor's shot of the entry to the actual church, and following this image, I'll put in some images of a nearby church we did walk to --Agia Odigytria-- that shows some of the details common to old Greek houses of worship, and some that I was surprised to see, like the spring I imagined running through Eleousa, manifested just a mile away to the north in a cave behind Odigytria ...
 
-<img src='eleousa.PNG' width='450'>
+<img src='/assets/arpa/eleousa.PNG' width='450'>
 
 Agia Odigytria ...
 
-<img src='odigytria-grosso.jpg' width='450'>
+<img src='/assets/arpa/odigytria-grosso.jpg' width='450'>
 
-<img src='odigytria.jpg' width='450'>
+<img src='/assets/arpa/odigytria.jpg' width='450'>
 
-<img src='spring.jpg' width='450'>
+<img src='/assets/arpa/spring.jpg' width='450'>
 
 a 'single, rush-covered chair'
 
-<img src='rushcoverdchair.jpg' width='450'>
+<img src='/assets/arpa/rushcoverdchair.jpg' width='450'>
 
 
 Tamata -- the top one has the word for 'thanks', and under are stamped images of body parts; the silver ones 'tarnished and dull'
 
-<img src='tamata-euxaristo.jpg' width='450'>
+<img src='/assets/arpa/tamata-euxaristo.jpg' width='450'>
 
-<img src='tamata.jpg' width='450'>
+<img src='/assets/arpa/tamata.jpg' width='450'>
 
 
-<img src='tamata-elias.jpg' width='450'>
+<img src='/assets/arpa/tamata-elias.jpg' width='450'>
 
 Unmolested icons
 
-<img src='fresco.jpg' width='450'>
+<img src='/assets/arpa/fresco.jpg' width='450'>
 
 a censor
 
-<img src='censor.jpg' width='450'>
+<img src='/assets/arpa/censor.jpg' width='450'>
 
 
 A certain greek woman manifesting that impulse to keep the churches 'cleaned and swept'
 
-![](clean-swept.jpg)
+<img src='/assets/arpa/clean-swept.jpg' width='450'>
 
 
 and, finally, an image of one of Mani's towers, from which families would fend off attackers, whether from other villages, or from feuding neighbors within their own ...
 
-![](tower.jpg)
+<img src='/assets/arpa/tower.jpg' width='450'>
 
 In the end I was pleased that so many small details I wrote about were so present in the churches we visited, reinforcing my memories of long-past visits. And I was frustrated that the landscape was just exactly as harsh as I remembered it, so much so that I was prevented from earning membership in the Arpaxos Society. Oh well! Beautiful and wild country. Maybe I will return one day and hire Stavros for the day.
