--- a/_posts/2009-02-23-a-lost-art.md
+++ b/_posts/2009-02-23-a-lost-art.md
@@ -6,7 +6,7 @@ tags : [(low) tech writer]
 ---
 [![low tech writer](/assets/ltw/header14.jpg)](http://lowtechwriter.com)
 
-In addition to the mighty Oxford English [Dictionary](http://www.imby.net/20090222/old-dictionaries-old-meanings), Excessively Large Edition, I have the comparably tiny, Pocket Oxford Dictionary, which was written by the incomparable Fowler brothers, authors of the still-selling-a-century-later Modern English Usage and The King's English. I can't tell you how many times I've looked up a word in this little book and been *delighted* by the the definition. Alright. Even I know how weird that sounds, but just listen to this nugget, the beginning of the definition of "Time": 
+In addition to the mighty Oxford English [Dictionary](https://www.dpmaddalena.com/20090222/old-dictionaries-old-meanings), Excessively Large Edition, I have the comparably tiny, Pocket Oxford Dictionary, which was written by the incomparable Fowler brothers, authors of the still-selling-a-century-later Modern English Usage and The King's English. I can't tell you how many times I've looked up a word in this little book and been *delighted* by the the definition. Alright. Even I know how weird that sounds, but just listen to this nugget, the beginning of the definition of "Time": 
 
 ### Time
 
