--- a/_posts/2009-01-08-bicycles.md
+++ b/_posts/2009-01-08-bicycles.md
@@ -4,7 +4,7 @@ title: "Bicycles"
 category : essay
 tags : [(low) tech writer]
 ---
-[![low tech writer](/assets/ltw/header14.jpg)](http://lowtechwriter.com)
+[![low tech writer](/assets/ltw/header14.jpg)](http://bit.ly/lowtechwriter)
 
 [![Bike](/assets/ltw/bicyclesm.jpg)](/assets/ltw/bicycle.jpg)
 
