--- a/_posts/2009-01-15-cast-iron.md
+++ b/_posts/2009-01-15-cast-iron.md
@@ -4,7 +4,7 @@ title: "Cast Iron"
 category : essay
 tags : [(low) tech writer]
 ---
-[![low tech writer](/assets/ltw/header14.jpg)](http://lowtechwriter.com)
+[![low tech writer](/assets/ltw/header14.jpg)](http://bit.ly/lowtechwriter)
 
 A number of years ago, we decided to buy a *nice* frying pan for our kitchen. We briefly considered nonstick (Teflon or whatever sciency coating is out there these days), but we simply had seen too many of them become *un-coated* with use. Was this our fault? Maybe. Maybe we weren't careful enough with the dreaded metal tools. But the question is meaningless: we will never buy a coated pan again. 
 
