--- a/_posts/2009-03-15-silence.md
+++ b/_posts/2009-03-15-silence.md
@@ -4,7 +4,7 @@ title: "Silence"
 category : essay
 tags : [(low) tech writer]
 ---
-[![low tech writer](/assets/ltw/header14.jpg)](http://lowtechwriter.com)
+[![low tech writer](/assets/ltw/header14.jpg)](http://bit.ly/lowtechwriter)
 
 
 I love it when the power goes out. I'm not immune to the inconvenience: I am a computer user after all (note that I don't publish these essays on parchment paper). But the possibility of a power outage is no real threat to me because I'm a laptop user (built in battery backup, you see), so I never worry about losing work, or even productivity. But if the power does go out, I will save my work, fold my laptop up, and revel in the silence and the dark. 
