--- a/_posts/2009-01-08-bicycles.md
+++ b/_posts/2009-01-08-bicycles.md
@@ -6,6 +6,10 @@ tags : [(low) tech writer]
 ---
 [![low tech writer](/assets/ltw/header14.jpg)](http://bit.ly/lowtechwriter)
 
+*[These essays are now also available in book form, printed on real paper](http://bit.ly/lowtechwriter)*
+
+
+
 [![Bike](/assets/ltw/bicyclesm.jpg)](/assets/ltw/bicycle.jpg)
 
 Some years ago I attended a fundraiser for an organization that was involved with micro-financing in an African nation. At the beginning of the evening, a missionary presented slides of life in this unquestionably poor nation. But as she showed pictures of the locals riding bicycles between home and work, making the point to the fairly wealthy audience that bicycles were *their only form of travel*, I detected more than a hint of *standards projection* - the assumption that these Africans were somehow not at an acceptable standard of living because they couldn't afford cars, or at best that they were to be pitied because they had to ride bicycles everywhere. What? I personally prefer my bicycle to a car. Sure a car is sometimes very helpful, and my family has one (in an area where many families have more than two). But there are so many reasons why I prefer bikes. I'm not so stupid as to imagine that the poor *prefer* poverty, but to look down on a culture that runs on bicycle power is to mistake simple and cheap for destitute. Wrong. Poverty sucks. Bikes do not. Not having a choice sucks, but cars are not the best choice most of the time. A "car in every garage" will not be the sign that this African nation has a sustainable economy. When everyone in the society can care for themselves and their families, and pass on the blessing to others, then the society will be healthy. I assume bikes will continue to be the primary form of transportation in many a developing economy.
