--- a/_posts/2009-01-15-cast-iron.md
+++ b/_posts/2009-01-15-cast-iron.md
@@ -6,6 +6,10 @@ tags : [(low) tech writer]
 ---
 [![low tech writer](/assets/ltw/header14.jpg)](http://bit.ly/lowtechwriter)
 
+*[These essays are now also available in book form, printed on real paper](http://bit.ly/lowtechwriter)*
+
+
+
 A number of years ago, we decided to buy a *nice* frying pan for our kitchen. We briefly considered nonstick (Teflon or whatever sciency coating is out there these days), but we simply had seen too many of them become *un-coated* with use. Was this our fault? Maybe. Maybe we weren't careful enough with the dreaded metal tools. But the question is meaningless: we will never buy a coated pan again. 
 
 We decided to buy a stainless steel pan, serious and heavy, from some famous company whose name you'd know, but I can't remember. It would be the kind of pan you keep forever, we told ourselves, to make ourselves feel better about the cost. We researched the options and ended up spending close to 150 dollars that Christmas on The Pan. We bought special pads (that wouldn't scratch it ... yes that is a problem with stainless steel: if you scratch it too much the rougher surface is harder to clean) and learned how to clean it with special powdery chemical stuff so that it would be pristine (again, so nothing would stick to it). It had carefully chosen layers of different materials in the thick base to transfer heat evenly. Sadly, Within a few months this impressive base had warped and the pan rocked on the stove-top. Since the handle was a long heavy piece of stainless steel itself, the pan always rocked in the direction of the handle. This made it really hard to cook sauces or fry things, as liquids pooled in the downhill third of the pan. We thought that maybe because it was designed as a "stove top" appliance, that it would be able to withstand stove-top heat. Our mistake. 
